fix: move carousel progress bar to top to avoid badge overlap

--- a/css/sections.css
+++ b/css/sections.css
@@ -215,7 +215,7 @@
 /* 進度條 */
 .carousel-progress {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 3px;
